--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
           <p id="collisionTreeDepthText"></p>
           <input type="range" min="0" max="8" value="50" class="slider" id="collisionTreeDepth">
         </div> 
+        <div>
+          Variable Time Step: 
+          <input type="checkbox" id="toggleTimeStep" onclick="toggleTimeStep()">
+        </div>
+        <div>
+          <p id="currentTimeStep"></p>
+          <input type="range" id="timeStep" min="0.00409836065" max="1" class="slider" step=".001">
+        </div>
         <p id="bounceEffect"></p>
         <input type="range" min="0" max="2" value="0" step=".01" class="slider" id="bounceEffectSlider">
         <select id="animationLoops">
@@ -84,6 +92,8 @@
       let controlAccessPanel = document.getElementById("ControlAccessPanel");
       let currentGravConstantSlider = document.getElementById("currentGravConstantSlider");
       let rotationSpeedSlider = document.getElementById("rotateSpeed");
+      let toggleTimestep = document.getElementById("toggleTimeStep");
+      let timeStep = document.getElementById("timeStep");
 
       bodyCountTextBox.value = gravSimScene.bodyCount;
       showTrailsBox.checked = gravSimScene.showTrail;
@@ -98,7 +108,8 @@
       controlSceneStart.style.display = (gravSimScene.desiredScene == gravSimScene.defaultScene) ? 'flex' : 'none';
       currentGravConstantSlider.value = gravSimScene.gravConstant;
       rotationSpeedSlider.value = gravSimScene.rotationSpeed;
-
+      toggleTimestep.checked = gravSimScene.solution.variableTimeStep;
+      timeStep.value = gravSimScene.constantTimeStep;
 
       let option = document.createElement('option');
       option.value = gravSimScene.defaultScene;
@@ -106,6 +117,11 @@
       sceneDropdown.appendChild(option);
       //load saved scenes into scene Dropdown
       sceneDropdown.value = gravSimScene.desiredScene;
+
+      function roundToDecimalPlaces(number, decimalPlaces) {
+        let factor = Math.pow(10, decimalPlaces);
+        return Math.round(number * factor) / factor;
+      }
 
       function restartSim() {
         gravSimScene.init();
@@ -120,6 +136,7 @@
         document.getElementById("currentSpeed"). textContent = "Current Sim Speed: " + gravSimScene.speedModifier;
         document.getElementById("collisionTreeDepthText").textContent = "Collision Tree Max Depth: " + gravSimScene.maxDepth;
         document.getElementById("currentGravConstant").textContent = "Current Gravity Constant: " + gravSimScene.gravConstant;
+        document.getElementById("currentTimeStep").textContent = "Current Time Step: " + roundToDecimalPlaces(timeStep.value, 4);
       }
       setInterval(updateSimData, 100);
 
@@ -211,6 +228,16 @@
         gravSimScene.updateRotateSpeed(rotationSpeedSlider.value)
       }
       rotationSpeedSlider.addEventListener('mousemove', updateRotateSpeed);
+
+      function toggleTimeStep(){
+        gravSimScene.toggleVariableTimeStep();
+      }
+      window.toggleTimeStep = toggleTimeStep;
+
+      function updateTimeStep(){
+        gravSimScene.updateTimeStep(timeStep.value);
+      }
+      timeStep.addEventListener('mouseup', updateTimeStep);
     </script>
   </body>
 </html>
