--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p id="bodyCount"></p>
             <input type="text" min="0" max="5000" value="50" step="1" class="textInput" id="bodyCountTextBox">
             <p id="spawnRange"></p>
-            <input type="range" min=".01" max="50" value="1" step=".5" class="slider" id="spawnRangeSlider">
+            <input type="range" min=".01" max="50" value="1" step=".01" class="slider" id="spawnRangeSlider">
           </div>
         </div>
         <p  onclick="restartSim()"> Click here to refresh </p>
@@ -137,7 +137,7 @@
         document.getElementById("currentSpeed"). textContent = "Current Sim Speed: " + gravSimScene.speedModifier;
         document.getElementById("collisionTreeDepthText").textContent = "Collision Tree Max Depth: " + gravSimScene.maxDepth;
         document.getElementById("currentGravConstant").textContent = "Current Gravity Constant: " + gravSimScene.gravConstant;
-        document.getElementById("currentTimeStep").textContent = "Constant Time Step: " + roundToDecimalPlaces(timeStep.value, 4) + ", Simulation Steps/Second: " + simStepPerSecond + ", Simulation Seconds/Second: " + (simStepPerSecond * timeStep.value);
+        document.getElementById("currentTimeStep").textContent = "Constant Time Step: " + roundToDecimalPlaces(timeStep.value, 4) + ", Simulation Steps/Second: " + simStepPerSecond + ", Simulation Seconds/Second: " + Math.min(roundToDecimalPlaces(simStepPerSecond * timeStep.value, 4), 1);
       }
       setInterval(updateSimData, 100);
 
